# phoenix-onchain-mm

./: Anchor.toml  Cargo.toml  README.md  config.toml  mm.json  package-lock.json
pomm/: Cargo.toml  README.md  config.toml
pomm/docs/: rebalance.md
pomm/src/: command.rs  config.rs  constant.rs  errors.rs  ids.rs  logic.rs  main.rs  utils.rs
pomm/src/command/: airdrop_base_and_quote.rs  auto.rs  cancle.rs  fetch_market_event.rs  get_market_address.rs  get_price.rs  grpc.rs  initialize.rs  list_market.rs  listen_balance.rs  mod.rs  update_quotes.rs  validate.rs  view_state_order_book.rs
programs/phoenix-onchain-mm/: Cargo.toml  README.md
programs/phoenix-onchain-mm/src/: constant.rs  errors.rs  lib.rs  oracle.rs  phoenix_v1.rs  state.rs
programs/phoenix-onchain-mm/src/instructions/: initialize.rs  mod.rs  update_quotes.rs
