[package]
name = "phoenix-onchain-mm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["solana", "phoenix", "maket-maker"]
repository = "https://github.com/All-In-One-Blockchain/phoenix-onchain-mm.git"
authors = ['davirain.yin@gmai.com']
readme = "README.md"
description  = """
    Phoenix on-chain MM program
"""

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_onchain_mm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
phoenix-v1 = { version = "0.2.3", features = ["no-entrypoint"] }
toml_edit = "=0.18.1"
proc-macro-crate = "=1.3.0"
pyth-sdk = "0.7.0"
pyth-sdk-solana = "0.7.0"
